adding the possibility to create synthetic data to config file. will be done in synth_data/create_data.py

--- a/classification.conf
+++ b/classification.conf
@@ -1,3 +1,18 @@
 [general]
+# Set the name of the run for identification
 run_name=run
+# Set the logging level for debugging purposes
+# Options: DEBUG, INFO, WARNING, ERROR, CRITICAL
 logging_level=DEBUG
+
+[synthetic data]
+# create a synthetic data set (TODO) or use the real data.
+data_set=real
+
+# config for cleaning the data 
+[data cleaning]
+
+[model]
+
+
+
