introduced config_parser as it's own script. started the implementation of creating synthetic data for the classification problem.

--- a/classification.conf
+++ b/classification.conf
@@ -4,6 +4,7 @@ run_name=run
 # Set the logging level for debugging purposes
 # Options: DEBUG, INFO, WARNING, ERROR, CRITICAL
 logging_level=DEBUG
+debug_mode=True
 
 [synthetic data]
 # create a synthetic data set (TODO) or use the real data.
