updates on the synthetic data creation. added it to master script.

--- a/classification.conf
+++ b/classification.conf
@@ -4,11 +4,11 @@ run_name=run
 # Set the logging level for debugging purposes
 # Options: DEBUG, INFO, WARNING, ERROR, CRITICAL
 logging_level=DEBUG
-debug_mode=True
 
 [synthetic data]
 # create a synthetic data set (TODO) or use the real data.
-data_set=real
+create_plots=True
+data_set=synthetic
 
 # config for cleaning the data 
 [data cleaning]
