reading in some more settings from the config file

--- a/classification.conf
+++ b/classification.conf
@@ -9,6 +9,8 @@ logging_level=DEBUG
 # create a synthetic data set (TODO) or use the real data.
 create_plots=True
 data_set=synthetic
+number_of_events=10000
+imbalance=0.977
 
 # config for cleaning the data 
 [data cleaning]
