added possibility to over or under sample with different methods.

--- a/classification.conf
+++ b/classification.conf
@@ -9,11 +9,24 @@ logging_level=DEBUG
 # create a synthetic data set (TODO) or use the real data.
 create_plots=True
 data_set=synthetic
+# total number of events/instances - signal and background
 number_of_events=10000
+# set the imbalance - percentage of background events
 imbalance=0.977
 
 # config for cleaning the data 
 [data cleaning]
+# TODO
+
+# config for sampling 
+[sampling]
+# turn sampling on/off
+sampling=True
+# type of sampling
+# possible choices: 
+# over sampling methods: [RandomOverSampler, SMOTE, SVMSMOTE, BoderlineSMOTE]
+# under sampling methods: [TomekLinks, RandomUnderSampler, ClusterCentroids]
+sampler=SMOTE
 
 [model]
 
