updated sampling. added possibility of a combination of under and over sampling.

--- a/classification.conf
+++ b/classification.conf
@@ -26,7 +26,12 @@ sampling=True
 # possible choices: 
 # over sampling methods: [RandomOverSampler, SMOTE, SVMSMOTE, BoderlineSMOTE]
 # under sampling methods: [TomekLinks, RandomUnderSampler, ClusterCentroids]
-sampler=SMOTE
+#if set to a list with two entries, then a combination of under and over sampling
+# is done. e.g. [RandomUnderSampler, SMOTE]. The undersamp_ratio is the percentage
+# of how much the majority class is reduced. e.g. 100 events majority class, with
+# undersamp_ratio = 0.4 -> reduced to 40 events. 
+sampler=[RandomUnderSampler, SMOTE]
+undersamp_ratio=0.4
 
 [model]
 
