--- a/classification.conf
+++ b/classification.conf
@@ -6,7 +6,7 @@ run_name=run
 logging_level=DEBUG
 
 [synthetic data]
-# create a synthetic data set (TODO) or use the real data.
+# create a synthetic data set or use the real data (TODO).
 create_plots=True
 data_set=synthetic
 # total number of events/instances - signal and background
