--- a/classification.conf
+++ b/classification.conf
@@ -18,6 +18,9 @@ imbalance=0.977
 [data cleaning]
 # TODO
 
+[data split]
+test_size=0.33
+
 # config for sampling 
 [sampling]
 # turn sampling on/off
@@ -32,6 +35,27 @@ sampling=True
 # undersamp_ratio = 0.4 -> reduced to 40 events. 
 sampler=[RandomUnderSampler, SMOTE]
 undersamp_ratio=0.6
+
+[hyper-parameter tuning]
+hyper_tune=True
+method=Bayes
+# bayes optimisation settings: 
+init_points=10
+n_iter=5
+acq="ei"
+xi=0.0
+#para_to_tune={
+#            "eta": (0.01, 1),
+#            "n_estimators": (300, 6000),
+#            "max_depth": (1, 40),
+#            "gamma": (0.00001, 10.0),
+#            "min_child_weight": (0, 50),
+#            "max_delta_step": (0.01, 5),
+#            "subsample": (0.01, 1.0),
+#            "colsample_bytree": (0.15, 1.0)
+#}
+
+para_to_tune = {"eta": [0.01, 1], "n_estimators": [300, 6000], "max_depth": [1, 40], "gamma": [0.00001, 10.0], "min_child_weight": [0, 50], "max_delta_step": [0.01, 5], "subsample": [0.01, 1.0], "colsample_bytree": [0.15, 1.0]}
 
 [model]
 
